--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,8 +3,8 @@
 }
 
 .products{
-    height: 33%;
-    width: 33%;
+    height: 200%;
+
     padding: 0;
     margin: 0;
     display: flex;
@@ -13,7 +13,7 @@
     flex-wrap: wrap;
     align-content: center;
     flex-grow: 1;
-    border: 2px solid white;
+    flex: 1 1 160px;
     
     
 }
