--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,7 @@
 .products{
     height: 200%;
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,4 +13,5 @@
     align-content: center;
     flex-grow: 1;
     flex: 1 1 160px;
+    width: 50%;
 }
