--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -6,7 +6,7 @@
     height: 200%;
 
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -14,6 +14,5 @@
     align-content: center;
     flex-grow: 1;
     flex: 1 1 160px;
-    
-    
+    width: 50%;
 }
