--- a/src/components/Bag/Bag.css
+++ b/src/components/Bag/Bag.css
@@ -9,7 +9,7 @@
 
     background-repeat: no-repeat;
     background-position: 50%;
-    background-color: white;
+    background-color: whitesmoke;
     transition: 0.1s linear;
 }
 .wrapper .bag__img {
@@ -75,7 +75,7 @@
 }
 .wrapper .bag__price {
     font-size: 22px;
-    color: gold;
+
 }
 .wrapper .close__btn {
     display: flex;
@@ -90,8 +90,8 @@
     font-size: 14px;
 }
 .wrapper .container {
-    color: #fff;
-    background: #1b1a20;
+
+    background: whitesmoke;
     height: 100vh;
     width: 400px;
     position: absolute;
@@ -139,7 +139,7 @@
 .wrapper .bag__total {
     padding: 16px 0;
     font-size: 26px;
-    color: gold;
+
 }
 .wrapper .checkout__btn {
     background: #111;
