--- a/src/components/Bag/Bag.css
+++ b/src/components/Bag/Bag.css
@@ -14,6 +14,7 @@
 }
 .wrapper .bag__img {
     width: 35px;
+    background-color: #2B2D42 ;
     background-image: url('bag.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -21,20 +22,20 @@
 }
 .wrapper .bag:hover {
     cursor: pointer;
-    background-color: #222;
+    background-color: #2B2D42;
 }
 .wrapper .items__count {
     position: relative;
     top: -20px;
     right: -10px;
-    border: 1px solid #333;
+    border: 1px solid #2B2D42;
     text-align: center;
     font-size: 12px;
     height: 25px;
     line-height: 25px;
     width: 25px;
     border-radius: 100%;
-    color: #333;
+    color: #2B2D42;
     background: #fb0;
 }
 .wrapper .item__close__btn__wrapper {
@@ -55,7 +56,7 @@
     font-size: 12px;
 }
 .wrapper .item__close__btn:hover {
-    background: #333;
+    background: #2B2D42;
 }
 .wrapper *:hover ~ #container {
     color: red;
@@ -64,7 +65,7 @@
 .wrapper .side__bar {
     display: flex;
     margin-top: 36px;
-    border: 1px solid #222;
+    border: 1px solid #2B2D42;
     justify-content: center;
     align-items: center;
 }
@@ -93,7 +94,7 @@
 
     background: whitesmoke;
     height: 100vh;
-    width: 400px;
+    width: 300px;
     position: absolute;
     right: 0;
 }
@@ -120,7 +121,7 @@
     cursor: pointer;
 }
 .wrapper .small__btn:hover {
-    background: #222;
+    background: #2B2D42;
 }
 .wrapper .bag__item span {
     line-height: 36px;
@@ -196,4 +197,8 @@
 .wrapper .slide-exit-active {
     margin-right: -400px;
     transition: 0.3s ease-out;
+}
+
+.mainRoot{
+    margin-top: 100px;
 }
