--- a/src/components/Bag/Bag.css
+++ b/src/components/Bag/Bag.css
@@ -91,7 +91,7 @@
     font-size: 14px;
 }
 .wrapper .container {
-
+    z-index: 1;
     background: whitesmoke;
     height: 100vh;
     width: 300px;
