--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,4 +1,10 @@
 .product-img {
     height: 200px;
     width: 200px;
+    padding-right: 120px;
+}
+
+.form-group{
+    width: 600px;
+    margin: "0 auto";
 }
